--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ APP_KEY=eaAJlaAlABGDmSOIOoBKZBuwZnGdjYMn
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=muebleria
+DB_DATABASE=muebleriaprins
 DB_USERNAME=root
 DB_PASSWORD=
 
